--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-flask==3.0.2
+flask==3.0.3
 gunicorn==23.0.0
 requests==2.32.3
-feedparser==6.0.10
-openai==0.28.0
+pytz==2024.1
+python-dateutil==2.9.0.post0
+openai==1.43.0
