--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-flask==3.0.3
+python-telegram-bot==20.3
+Flask==2.3.2
+requests==2.31.0
 gunicorn==23.0.0
-requests==2.32.3
-pytz==2024.1
+openai==0.27.8
 python-dateutil==2.9.0.post0
-openai==1.43.0
